# KYC_api

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
migrations/models/: 0_20240108221030_init.py  1_20240114164828_update.py  2_20240114170456_update.py  3_20240114192052_update.py
scripts/: createusers.py
src/app/: routers.py  worker.py
src/app/auth/: auth_handler.py  permission.py  routers.py  schemas.py
src/app/auth/endpoints/: token.py
src/app/base/utils/: __email_sender.py  documents.py  email_seder.py  email_sender.py  email_sender_old.py  file_manager.py
src/app/documents/: routers.py
src/app/documents/endpoints/: upload.py
src/app/files/: models.py  routers.py  schemas.py  services.py
src/app/files/endpoints/: download.py  file.py  upload.py
src/app/users/: models.py  routers.py  schemas.py
src/app/users/endpoints/: admin.py  user.py
src/config/: settings.py
src/templates/: email_test.html  file_add.html  file_add.mjml  file_status.html  file_status.mjml  files_add.html  files_add.mjml
tests/: conftest.py  test_user.py
tests/app/auth/: test_token.py
tests/app/base/utils/: test_file_manager.py
tests/app/files/: test_download.py  test_upload.py
tests/app/users/: test_admin.py  test_user.py
tests/users/: admin.py  test_user.py
tests/utils/: utils.py
