[tool.poetry]
name = "kyc"
version = "0.1.0"
description = ""
authors = ["u_alex90 <u_alex90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
tortoise-orm = "^0.20.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pydantic = "^2.5.3"
emails = "^0.6"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
