[tool.poetry]
name = "kyc"
version = "0.1.0"
description = ""
authors = ["u_alex90 <u_alex90@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
tortoise-orm = "^0.20.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
emails = "^0.6"
email-validator = "^2.1.0.post1"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"
fastapi-pagination = "^0.12.14"
aerich = "^0.7.2"
httpx = "^0.26.0"
faker = "^22.1.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[tool.aerich]
tortoise_orm = "src.config.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
